[project]
name = "communitypulse-env"
version = "1.0.0"
description = "An RL environment simulating humanitarian NGO volunteer coordination"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.openenv]
name = "communitypulse-env"
version = "1.0.0"
config = "openenv.yaml"
